--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "postcss": "^8",
     "prisma": "^6.1.0",
     "supertest": "^7.0.0",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
